# matrix-free-rayleigh-relaxation

./: COLAB.md  LICENSE  README.md  pyproject.toml
docs/: repository_plan.md
examples/: run_corrected_dipole.py  run_double_well.py  run_h2plus_curve.py  run_harmonic_oscillator_3d.py  run_hydrogen_box.py  run_hydrogen_centered_field.py  run_yukawa_scan.py
mrsr/: __init__.py  grid.py  initializers.py  io.py  operators.py  potentials.py  solver.py
notebooks/: MAIN-COLAB-NOTEBOOK.ipynb  colab_quickstart.ipynb
scripts/: plot_h2plus_curve.py  plot_h2plus_slices.py  plot_hydrogen_sweep.py  plot_slice.py  run_scaling_hydrogen.py
tests/: test_small_dense_comparison.py
