[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-free-rayleigh-relaxation"
version = "0.1.0"
description = "Matrix-free Rayleigh-shifted relaxation for finite-difference Schrödinger ground states"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Mahdi Sasar"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "tensorflow>=2.13",
]

[tool.setuptools.packages.find]
include = ["mrsr*"]
